--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-jsbeautifier": "^2.0.3",
     "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-tinypng": "^1.0.2",
+    "gulp-uglify": "^3.0.0",
     "gulp-uglifycss": "^1.0.6"
   },
   "scripts": {
